--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,7 +1,9 @@
 .form {
     width: max-content;
+    margin: 0 auto; 
     display: flex;
     flex-direction: column;
+    text-align: center;
     gap: 8px;
     border: 2px solid #2f2828;
     border-radius: 12px;
@@ -41,7 +43,7 @@
     align-items: center;
     border: none;
     border-radius: 10px;
-    background-color: #6f1a5a;
+    background-color: #68e76a;
     color: #ffffff;
     font-size: 14px;
     text-transform: uppercase;
