--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -9,7 +9,7 @@
 
 .searchInput {
     width: 250px;
-    border: 2px solid #2f2828;
+    border: 2px solid #71de99;
     border-radius: 8px;
     outline: transparent;
     padding: 8px;
@@ -17,5 +17,5 @@
 }
 
 .searchInput:focus {
-    border-color: #84336f;
+    border-color: #98f497;
 }
